# in_all_scales

./: .flake8  .gitignore  README.md  index.html  index.py  models.py  pyproject.toml  style.css  tests.py
.github/workflows/: tests.yml
app/: __init__.py  create_html.py  main.py  models.py  pattern.py  scale_group.py  settings.py  transpose.py  transpose_output.py
app/models/: models_pattern.py
assets/: page_template.html  style.css
patterns/: pattern.txt  test.txt
results/: harmonic_minor_up_and_down.html  jazz_melodic_minor_up_and_down.html  major_up_and_down.html  natural_minor_up_and_down.html  phrygian_dominant_up_and_down.html  test_scale_test_pattern.html  whole-tone_whole_tone_up_and_down.html
scales/: Natural_minors.txt  test.txt
tests/: conftest.py  pattern.py  scale_group.py  test_create_html.py  test_main.py  test_pattern.py  test_scale_group.py  test_transpose.py  test_transpose_output.py  tests.py  tests_create_html.py  tests_transpose.py
tests/results/: dorian_up_and_down.html  half-whole_up_and_down.html  test_scale_test_pattern.html  whole-half_up_and_down.html  whole-tone_up_and_down.html  whole-tone_whole_tone_up_and_down.html
