[tool.poetry]
name = "in-all-scales"
version = "0.1.0"
description = ""
authors = ["Irina <eira@mail.ru>"]
readme = "README.md"
packages = [{include = "in_all_scales"}]

[tool.poetry.dependencies]
python = "^3.9"
pyhtml2pdf = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
