[tool.poetry]
name = "into-all-scales"
version = "0.1.0"
description = ""
authors = ["Irina <eira@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyhtml2pdf = "^0.0.6"
mypy = "^1.0.0"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
